--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,3 +1,7 @@
 controllers:
     resource: ../../src/Controller/
     type: annotation
+    prefix:
+        en: '' # don't prefix URLs for English, the default locale
+        lv: '/lv'
+        ru: '/ru'
